# Kabul-Sweets-

./: .gitignore  .gitmodules  PRODUCTION_AUDIT.md  README.md  docker-compose.yml  package-lock.json  planning.md  reminaing.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  alembic.ini  debug_analytics.py  docker-compose.yml  pyproject.toml  query_product.py  railpack.json  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: add_clerk_user_id.py  add_staff_role.py
backend/app/: __init__.py  celery_app.py  create_admin.py  db_reset.py  init_db.py  main.py  seed.py
backend/app/api/: deps.py
backend/app/api/v1/: ai.py  analytics.py  auth.py  business.py  carts.py  health.py  images.py  ml.py  orders.py  payments.py  products.py  router.py  telegram.py  (+1 more)
backend/app/core/: config.py  database.py  logging.py  monitoring.py  rate_limiter.py  redis.py  security.py  security_middleware.py  validators.py
backend/app/models/: analytics.py  audit_log.py  business.py  cart.py  ml.py  order.py  product.py  user.py
backend/app/schemas/: analytics.py  order.py  product.py  user.py
backend/app/services/: ai_service.py  analytics_service.py  business_service.py  cache_service.py  cart_service.py  custom_cake_service.py  deposit_service.py  image_processing_service.py  llm_service.py  ml_service.py  order_service.py  product_service.py  receipt_service.py  storage_service.py  stripe_service.py  telegram_service.py  trend_service.py
backend/app/tests/: test_api.py
backend/app/workers/: __init__.py  analytics_tasks.py  cart_tasks.py  email_tasks.py  sms_tasks.py  telegram_tasks.py  trend_tasks.py
backend/docs/: NOTIFICATIONS_SETUP.md  RAILWAY_WORKER_SETUP.md
backend/scripts/: check_notifications.py  check_telegram_webhook.py  migrate_image_urls.py  set_webhook_prod.py  setup_telegram_webhook.py  test_custom_cake_listing.py
backend/tests/: test_telegram_acting_admin.py
(+204 files in other folders)
