[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kabul-sweets-backend"
version = "0.1.0"
description = "Kabul Sweets Bakery - Backend API"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.14.0",
    # Redis
    "redis[hiredis]>=5.0.0",
    # Auth
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "argon2-cffi>=23.1.0",
    # Environment
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    # Utilities
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "email-validator>=2.0.0",
    # Payments
    "stripe>=8.0.0",
    # Background Workers
    "celery[redis]>=5.4.0",
    # Email
    "aiosmtplib>=3.0.0",
    "resend>=2.1.0",
    # Templating (for email/SMS templates)
    "jinja2>=3.1.0",
    # HTTP Client (for AI API calls)
    "httpx>=0.27.0",
    # PDF Generation
    "reportlab>=4.0.0",
    # Image processing
    "pillow>=11.0.0",
    # Object storage (S3 — all images stored here, not in the DB)
    "boto3>=1.35.0",
    # Monitoring
    "sentry-sdk[fastapi,sqlalchemy]>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]
ml = [
    # Optional ML stack (not required for core API runtime)
    "numpy>=1.26.0,<3.0.0",
    "xgboost>=2.1.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
